[gd_scene load_steps=7 format=3 uid="uid://dyqcmx1cj35wv"]

[ext_resource type="Texture2D" uid="uid://diia43eytv2d" path="res://Sprites/Big_Asteroid-1.png.png" id="1_7g3by"]
[ext_resource type="Script" path="res://Big_Asteroid.gd" id="1_joayl"]
[ext_resource type="Texture2D" uid="uid://cf4ytmn00xnyf" path="res://Sprites/Big_Crack1-1.png.png" id="3_j1cvm"]
[ext_resource type="Texture2D" uid="uid://ce4j7lrf3lvas" path="res://Sprites/Big_Crack2-2.png.png" id="4_8a18b"]
[ext_resource type="Texture2D" uid="uid://cs4hs8gfxfsa6" path="res://Sprites/Big_Crack3-3.png.png" id="5_1egcb"]
[ext_resource type="Texture2D" uid="uid://cbo0cofmvltld" path="res://Sprites/Big_Crack4-4.png.png" id="6_65v4x"]

[node name="Big_Asteroid" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_joayl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_7g3by")

[node name="Crack1" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("3_j1cvm")

[node name="Crack2" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("4_8a18b")

[node name="Crack3" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("5_1egcb")

[node name="Crack4" type="Sprite2D" parent="Sprite2D"]
visible = false
texture_filter = 1
texture = ExtResource("6_65v4x")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-24, -57, -11, -57, 0, -54, 17, -57, 33, -52, 42, -41, 54, -30, 54, -8, 53, -5, 55, 2, 55, 11, 53, 17, 59, 25, 58, 40, 53, 45, 44, 46, 30, 53, 8, 53, -1, 50, -14, 52, -26, 56, -34, 50, -44, 45, -47, 39, -47, 30, -56, 18, -59, 4, -59, -6, -48, -25, -45, -35, -38, -42, -32, -42, -27, -49)
